[package]
name = "NeoClef"
version = "0.1.0"
edition = "2024"

[dependencies]
midly = "0.5.3"
quick-xml = { version = "0.37.5", features = ["serialize", "serde-types", "overlapped-lists"] }
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
insta = "1.43.1"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
