[package]
name = "NeoClef"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["./serde-value"]

[dependencies]
midly = "0.5.3"
quick-xml = { version = "0.37.5", features = ["serialize", "serde-types", "overlapped-lists"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-value = { path = "./serde-value" }
indexmap = "2.13.0"

[dev-dependencies]
insta = "1.43.1"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
